started html page; added jquery

--- a/xmlPT.html
+++ b/xmlPT.html
@@ -1,2 +1,28 @@
-<!-- XML Periodic Table HTML Website -->
+<!-- 
+XML Periodic Table HTML Website
+--Author: Coire Gavin-Hanner
+--Date Created: 4-10-17
+-->
+
+<html>
+	<head>
+		<title> XML Periodic Table </title>	
+		<link rel="stylesheet" type="text/css" href="xmlPT.css">
+		<script src="jquery-3.1.1.min.js"></script>
+	</head>
+	<body>
+		<h1>XML Periodic Table</h1>
+		<h3>Project Coire Gavin-Hanner</h3>
+		<hr>
+		<div class ="sidebar" id = "sidebar"><img src="PongSidebar.png"/></div>
+		<p><input type="button" onclick="javascript: connectToServer()" name="submit" value="Connect"/></p>
+		<div class = "section" id = "userInfo"></div>
+		<canvas id="canvas" width="600px" height="600px"></canvas>
+		<script type = "text/javascript" src="pong.js"></script>
+		<p><input type="button" onclick="javascript: startGame()" name="submit" value="Start Game"/></p>
+	</body>
+</html>
+
+
+
 
