--- a/xmlPT.html
+++ b/xmlPT.html
@@ -9,27 +9,25 @@ XML Periodic Table HTML Website
 		<title> XML Periodic Table </title>	
 		<link rel="stylesheet" type="text/css" href="xmlPT.css">
 		<script src="jquery-3.1.1.min.js"></script>
+		<script type = "text/javascript" src="xmlPT.js"></script>
 	</head>
-	<body onload="init()">
-		<form onsubmit="return false">
-			<h1>XML Periodic Table</h1>
-			<h3>Project Coire Gavin-Hanner</h3>
-			<table>
-				<tbody>
-					<tr>
-						<td align="right">Element Number</td>
-						<td align="left">
-							<input name="elementNumber" type="number" maxlength="3" id="elementNumber">
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<p>
-				<input type="Button" onclick="javascript: getAtomInfo()" name="getinfo" value="Submit">
-			</p>
-			<div id="responseArea">
-			</dv>
-		</form>
+	<body>
+		<h1>XML Periodic Table</h1>
+		<h3>Project Coire Gavin-Hanner</h3>
+		<table>
+			<tbody>
+				<tr>
+					<td align="right">Element Number</td>
+					<td align="left">
+						<input name="elementNumber" type="number" maxlength="3" id="elementNumber">
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<p>
+			<input type="Button" onclick="javascript: getAtomInfo()" name="getinfo" value="Submit">
+		</p>
+		<div id="content"></div>
 	</body>
 </html>
 
