--- a/xmlPT.html
+++ b/xmlPT.html
@@ -13,7 +13,7 @@ XML Periodic Table HTML Website
 	</head>
 	<body>
 		<h1>XML Periodic Table</h1>
-		<h3>Project Coire Gavin-Hanner</h3>
+		<h3>Project Coire Gavin-Hanner and Alex Seaver</h3>
 		<table>
 			<tbody>
 				<tr>
@@ -28,6 +28,60 @@ XML Periodic Table HTML Website
 			<input type="Button" onclick="javascript: getAtomInfo()" name="getinfo" value="Submit">
 		</p>
 		<div id="content"></div>
+		<canvas id="element1" width="100px" height="100px"></canvas>
+		<canvas id="element2" width="100px" height="100px"></canvas>
+		<canvas id="element3" width="100px" height="100px"></canvas>
+		<canvas id="element4" width="100px" height="100px"></canvas>
+		<canvas id="element5" width="100px" height="100px"></canvas>
+		<canvas id="element6" width="100px" height="100px"></canvas>
+		<canvas id="element7" width="100px" height="100px"></canvas>
+		<canvas id="element8" width="100px" height="100px"></canvas>
+		<canvas id="element9" width="100px" height="100px"></canvas>
+		<canvas id="element10" width="100px" height="100px"></canvas>
+		<canvas id="element11" width="100px" height="100px"></canvas>
+		<canvas id="element12" width="100px" height="100px"></canvas>
+		<canvas id="element13" width="100px" height="100px"></canvas>
+		<canvas id="element14" width="100px" height="100px"></canvas>
+		<canvas id="element15" width="100px" height="100px"></canvas>
+		<canvas id="element16" width="100px" height="100px"></canvas>
+		<canvas id="element17" width="100px" height="100px"></canvas>
+		<canvas id="element18" width="100px" height="100px"></canvas>
+		<canvas id="element19" width="100px" height="100px"></canvas>
+		<canvas id="element20" width="100px" height="100px"></canvas>
+		<canvas id="element21" width="100px" height="100px"></canvas>
+		<canvas id="element22" width="100px" height="100px"></canvas>
+		<canvas id="element23" width="100px" height="100px"></canvas>
+		<canvas id="element24" width="100px" height="100px"></canvas>
+		<canvas id="element25" width="100px" height="100px"></canvas>
+		<canvas id="element26" width="100px" height="100px"></canvas>
+		<canvas id="element27" width="100px" height="100px"></canvas>
+		<canvas id="element28" width="100px" height="100px"></canvas>
+		<canvas id="element29" width="100px" height="100px"></canvas>
+		<canvas id="element30" width="100px" height="100px"></canvas>
+		<canvas id="element31" width="100px" height="100px"></canvas>
+		<canvas id="element32" width="100px" height="100px"></canvas>
+		<canvas id="element33" width="100px" height="100px"></canvas>
+		<canvas id="element34" width="100px" height="100px"></canvas>
+		<canvas id="element35" width="100px" height="100px"></canvas>
+		<canvas id="element36" width="100px" height="100px"></canvas>
+		<canvas id="element37" width="100px" height="100px"></canvas>
+		<canvas id="element38" width="100px" height="100px"></canvas>
+		<canvas id="element39" width="100px" height="100px"></canvas>
+		<canvas id="element40" width="100px" height="100px"></canvas>
+		<canvas id="element41" width="100px" height="100px"></canvas>
+		<canvas id="element42" width="100px" height="100px"></canvas>
+		<canvas id="element43" width="100px" height="100px"></canvas>
+		<canvas id="element44" width="100px" height="100px"></canvas>
+		<canvas id="element45" width="100px" height="100px"></canvas>
+		<canvas id="element46" width="100px" height="100px"></canvas>
+		<canvas id="element47" width="100px" height="100px"></canvas>
+		<canvas id="element48" width="100px" height="100px"></canvas>
+		<canvas id="element49" width="100px" height="100px"></canvas>
+		<canvas id="element50" width="100px" height="100px"></canvas>
+		<canvas id="element51" width="100px" height="100px"></canvas>
+		<canvas id="element52" width="100px" height="100px"></canvas>
+		<canvas id="element53" width="100px" height="100px"></canvas>
+		<canvas id="element54" width="100px" height="100px"></canvas>
 	</body>
 </html>
 
