entire table drawn

--- a/xmlPT.html
+++ b/xmlPT.html
@@ -29,25 +29,25 @@ XML Periodic Table HTML Website
 		</p>
 		<div id="content"></div>
 		<canvas id="element1" width="50px" height="50px"></canvas>
-		<!--<canvas id="element2" width="50px" height="50px"></canvas>-->
+		<canvas id="element2" width="50px" height="50px"></canvas>
 		<canvas id="element3" width="50px" height="50px"></canvas>
-		<!--<canvas id="element4" width="50px" height="50px"></canvas>
+		<canvas id="element4" width="50px" height="50px"></canvas>
 		<canvas id="element5" width="50px" height="50px"></canvas>
 		<canvas id="element6" width="50px" height="50px"></canvas>
 		<canvas id="element7" width="50px" height="50px"></canvas>
 		<canvas id="element8" width="50px" height="50px"></canvas>
 		<canvas id="element9" width="50px" height="50px"></canvas>
-		<canvas id="element10" width="50px" height="50px"></canvas>-->
+		<canvas id="element10" width="50px" height="50px"></canvas>
 		<canvas id="element11" width="50px" height="50px"></canvas>
-		<!--<canvas id="element12" width="50px" height="50px"></canvas>
+		<canvas id="element12" width="50px" height="50px"></canvas>
 		<canvas id="element13" width="50px" height="50px"></canvas>
 		<canvas id="element14" width="50px" height="50px"></canvas>
 		<canvas id="element15" width="50px" height="50px"></canvas>
 		<canvas id="element16" width="50px" height="50px"></canvas>
 		<canvas id="element17" width="50px" height="50px"></canvas>
-		<canvas id="element18" width="50px" height="50px"></canvas>-->
+		<canvas id="element18" width="50px" height="50px"></canvas>
 		<canvas id="element19" width="50px" height="50px"></canvas>
-		<!--<canvas id="element20" width="50px" height="50px"></canvas>
+		<canvas id="element20" width="50px" height="50px"></canvas>
 		<canvas id="element21" width="50px" height="50px"></canvas>
 		<canvas id="element22" width="50px" height="50px"></canvas>
 		<canvas id="element23" width="50px" height="50px"></canvas>
@@ -63,9 +63,9 @@ XML Periodic Table HTML Website
 		<canvas id="element33" width="50px" height="50px"></canvas>
 		<canvas id="element34" width="50px" height="50px"></canvas>
 		<canvas id="element35" width="50px" height="50px"></canvas>
-		<canvas id="element36" width="50px" height="50px"></canvas>-->
+		<canvas id="element36" width="50px" height="50px"></canvas>
 		<canvas id="element37" width="50px" height="50px"></canvas>
-		<!--<canvas id="element38" width="50px" height="50px"></canvas>
+		<canvas id="element38" width="50px" height="50px"></canvas>
 		<canvas id="element39" width="50px" height="50px"></canvas>
 		<canvas id="element40" width="50px" height="50px"></canvas>
 		<canvas id="element41" width="50px" height="50px"></canvas>
@@ -81,9 +81,74 @@ XML Periodic Table HTML Website
 		<canvas id="element51" width="50px" height="50px"></canvas>
 		<canvas id="element52" width="50px" height="50px"></canvas>
 		<canvas id="element53" width="50px" height="50px"></canvas>
-		<canvas id="element54" width="50px" height="50px"></canvas>-->
+		<canvas id="element54" width="50px" height="50px"></canvas>
 		<canvas id="element55" width="50px" height="50px"></canvas>
+		<canvas id="element56" width="50px" height="50px"></canvas>
+		<canvas id="element57_71" width="50px" height="50px"></canvas>
+		<canvas id="element57" width="50px" height="50px"></canvas>
+		<canvas id="element58" width="50px" height="50px"></canvas>
+		<canvas id="element59" width="50px" height="50px"></canvas>
+		<canvas id="element60" width="50px" height="50px"></canvas>
+		<canvas id="element61" width="50px" height="50px"></canvas>
+		<canvas id="element62" width="50px" height="50px"></canvas>
+		<canvas id="element63" width="50px" height="50px"></canvas>
+		<canvas id="element64" width="50px" height="50px"></canvas>
+		<canvas id="element65" width="50px" height="50px"></canvas>
+		<canvas id="element66" width="50px" height="50px"></canvas>
+		<canvas id="element67" width="50px" height="50px"></canvas>
+		<canvas id="element68" width="50px" height="50px"></canvas>
+		<canvas id="element69" width="50px" height="50px"></canvas>
+		<canvas id="element70" width="50px" height="50px"></canvas>
+		<canvas id="element71" width="50px" height="50px"></canvas>
+		<canvas id="element72" width="50px" height="50px"></canvas>
+		<canvas id="element73" width="50px" height="50px"></canvas>
+		<canvas id="element74" width="50px" height="50px"></canvas>
+		<canvas id="element75" width="50px" height="50px"></canvas>
+		<canvas id="element76" width="50px" height="50px"></canvas>
+		<canvas id="element77" width="50px" height="50px"></canvas>
+		<canvas id="element78" width="50px" height="50px"></canvas>
+		<canvas id="element79" width="50px" height="50px"></canvas>
+		<canvas id="element80" width="50px" height="50px"></canvas>
+		<canvas id="element81" width="50px" height="50px"></canvas>
+		<canvas id="element82" width="50px" height="50px"></canvas>
+		<canvas id="element83" width="50px" height="50px"></canvas>
+		<canvas id="element84" width="50px" height="50px"></canvas>
+		<canvas id="element85" width="50px" height="50px"></canvas>
+		<canvas id="element86" width="50px" height="50px"></canvas>
 		<canvas id="element87" width="50px" height="50px"></canvas>
+		<canvas id="element88" width="50px" height="50px"></canvas>
+		<canvas id="element89_103" width="50px" height="50px"></canvas>
+		<canvas id="element89" width="50px" height="50px"></canvas>
+		<canvas id="element90" width="50px" height="50px"></canvas>
+		<canvas id="element91" width="50px" height="50px"></canvas>
+		<canvas id="element92" width="50px" height="50px"></canvas>
+		<canvas id="element93" width="50px" height="50px"></canvas>
+		<canvas id="element94" width="50px" height="50px"></canvas>
+		<canvas id="element95" width="50px" height="50px"></canvas>
+		<canvas id="element96" width="50px" height="50px"></canvas>
+		<canvas id="element97" width="50px" height="50px"></canvas>
+		<canvas id="element98" width="50px" height="50px"></canvas>
+		<canvas id="element99" width="50px" height="50px"></canvas>
+		<canvas id="element100" width="50px" height="50px"></canvas>
+		<canvas id="element101" width="50px" height="50px"></canvas>
+		<canvas id="element102" width="50px" height="50px"></canvas>
+		<canvas id="element103" width="50px" height="50px"></canvas>
+		<canvas id="element104" width="50px" height="50px"></canvas>
+		<canvas id="element105" width="50px" height="50px"></canvas>
+		<canvas id="element106" width="50px" height="50px"></canvas>
+		<canvas id="element107" width="50px" height="50px"></canvas>
+		<canvas id="element108" width="50px" height="50px"></canvas>
+		<canvas id="element109" width="50px" height="50px"></canvas>
+		<canvas id="element110" width="50px" height="50px"></canvas>
+		<canvas id="element111" width="50px" height="50px"></canvas>
+		<canvas id="element112" width="50px" height="50px"></canvas>
+		<canvas id="element113" width="50px" height="50px"></canvas>
+		<canvas id="element114" width="50px" height="50px"></canvas>
+		<canvas id="element115" width="50px" height="50px"></canvas>
+		<canvas id="element116" width="50px" height="50px"></canvas>
+		<canvas id="element117" width="50px" height="50px"></canvas>
+		<canvas id="element118" width="50px" height="50px"></canvas>
+
 	</body>
 </html>
 
