Cleaned up the visuals, added atomic numbers, cannot figure out modals for the life of me.

--- a/xmlPT.html
+++ b/xmlPT.html
@@ -13,8 +13,8 @@ XML Periodic Table HTML Website
 	</head>
 	<body>
 		<h1>XML Periodic Table</h1>
-		<h3>Project Coire Gavin-Hanner and Alex Seaver</h3>
-		<div id="content" class="modal"></div>
+		<h3>Project by Coire Gavin-Hanner and Alex Seaver</h3>
+		<div id="content"></div>
 		<div id="table">
 			<canvas id="element1" width="50px" height="50px" style="border:1px solid #000000;" onclick="getAtomInfo(1)"></canvas>
 			<canvas id="element2" width="50px" height="50px" style="border:1px solid #000000;" onclick="getAtomInfo(2)"></canvas>
